# Wii-Scale

./: .gitignore  .gitmodules  .jshintrc  LICENSE  README.md  data.json  gruntfile.js  index.html  package.json  params.json  setup.py  wii-scale.py  wiiboard.py
installation/: wiiscale.service
scripts/: post-install.js  pre-install.js  python.js  server.js  start-backend.js  start-python.js  start.js  xwiibind.sh
test/: test.js
web/: index.html  package.json  server.js
web/public/source/less/: app.less  build.less  variables.less
web/public/source/scripts/: app.js  client.js  controllers.js  directives.js  services.js
web/public/views/: index.html
web/public/views/directives/: delete-entry-modal.html  delete-user-modal.html  history.html  progress-bar.html  status.html
web/public/views/partials/: start.html
web/server/: entries.js  entry.js  storage.js
web/server/models/: entries.js  entry.js  storage.js  user.js  users.js
web/server/routes/: index.js  socket.js
web/source/less/: build.less  sources.less
web/source/scripts/: client.js
web/static/scripts/: client.js
web/static/styles/: site.css
web/views/: index.html
wii-scale/: 70-wii-scales.rules  BlueZDevice.cpp  BlueZDevice.h  CMakeLists.txt  UDev.cpp  UDev.h  UDevDevice.cpp  UDevDevice.h  XWiiIface.cpp  XWiiIface.h  XWiiMonitor.cpp  XWiiMonitor.h  __init__.py  bind-setup.py  pair-board.py  wii-scale.cpp  wii-scale.py  wiiboard.py
